--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "standard": "^17.1.0"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
     "express": "^4.18.2"
   },
   "type": "module"
